# litert-lm-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: batch_inference.rs  simple_chat.rs
src/: lib.rs
